--- a/Timer2/app/src/main/res/values/styles.xml
+++ b/Timer2/app/src/main/res/values/styles.xml
@@ -11,4 +11,6 @@
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
+    <style name="DarkTheme" parent="Theme.AppCompat.DayNight"/>
+
 </resources>
